# marketlens-python

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml  server.json
examples/: backtest_alpha.py  backtest_basic.py  backtest_limit_orders.py  backtest_portfolio.py  backtest_surface.py  event_strikes.py  execution_cost.py  implied_surfaces.py
scripts/: release.sh
src/marketlens/: __init__.py  _base.py  _client.py  _constants.py  _pagination.py  _progress.py  exceptions.py
src/marketlens/backtest/: __init__.py  _bar.py  _decimal.py  _engine.py  _fees.py  _fills.py  _portfolio.py  _prefetch.py  _results.py  _strategy.py  _types.py
src/marketlens/backtest/_dashboard/: __init__.py  _serialize.py  _server.py
src/marketlens/backtest/_dashboard/_static/: dashboard.js  index.html  style.css
src/marketlens/helpers/: convert.py  replay.py  surface.py  walk.py
src/marketlens/mcp/: __init__.py  __main__.py  _format.py  _runner.py  server.py
src/marketlens/resources/: events.py  exports.py  markets.py  orderbook.py  reference.py  series.py  signals.py
src/marketlens/types/: __init__.py  _validators.py  candle.py  history.py  market.py  orderbook.py  reference.py  signal.py  trade.py
tests/: conftest.py  test_alpha.py  test_backtest.py  test_client.py  test_coalesce.py  test_dashboard.py  test_exports.py  test_fills.py  test_mcp.py  test_pagination.py  test_prefetch.py  test_progress.py  test_replay.py  test_subtype_cohort.py  test_types.py  test_walk.py
