[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "marketlens"
version = "1.2.2"
description = "Python SDK for Polymarket order book data and backtesting. Tick-level L2 snapshots, billions of deltas, full book reconstruction, and a strategy backtesting engine with realistic execution."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.25",
    "orjson>=3.9",
    "pydantic>=2.0",
    "pandas>=1.5",
    "pyarrow>=14.0",
]

[project.optional-dependencies]
progress = ["rich>=13.0"]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "respx>=0.21",
    "rich>=13.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/marketlens"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
